[package]
name = "qq_bot"
version = "2.0.0"
edition = "2021"
license = "AGPL"
authors = ["Caviar-X", "spore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc_qq = "0.1.15"
anyhow = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
md5 = "*"
sorensen = "*"
walkdir = "*"
reqwest = "*"
pdqhash = "*"
rand = "*"
[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
